# interferopy

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  cube.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tools.py
.github/workflows/: pypi-publish.yml
docs/: conf.py  index.rst  interferopy.rst  modules.rst  requirements.txt
docs/pages/: api.rst  findclumps.rst  install.rst  plots.rst  tools.rst  working-cube.rst
examples/: dust_continuum_fitting.py  examples.py
examples/data/: Pisco.cii.455kms.dirty.fits  Pisco.cii.455kms.image.fits  Pisco.cii.455kms.image.pbcor.fits  Pisco.cii.455kms.model.fits  Pisco.cii.455kms.pb.fits  Pisco.cii.455kms.psf.fits  Pisco.cii.455kms.residual.fits  Pisco_continuum_fluxes.txt
interferopy/: __init__.py  casatools_vla_pipe.py  cube.py  tools.py
interferopy/data/: default.param  default.sex
interferopy/src/: tools.py
src/: casatools.py  casatools_vla_pipe.py  cube.py  tools.py
