[metadata]
name = interferopy
description = radio-to-mm interferometric data analysis package
long_description = file: README.md
long_description_content_type = text/markdown
author = Leindert Boogard, Romain Meyer, Mladen Novak
author_email = boogard@mpia.de, meyer@mpia.de
url = https://interferopy.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/interferopy/interferopy/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3


[options]
zip_safe = False
packages =
    interferopy
include_package_data = True
install_requires =
    numpy>=1.20
    scipy>=1.7
    matplotlib>=3.4
    tqdm>=4.62
    astropy>=4.3
python_requires = >=3.7
